--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,17 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            kapt {
+               arguments{
+                   arg("room.schemaLocation", "$projectDir/schemas".toString())
+               }
+            }
+        }
+
+
     }
 
     buildTypes {
